# reinforce_learning_indian_poker

./: README.md  package.xml  setup.py
indian_poker_ws/: chips_action.py  g_c_ros_action.py  gesture_card_traker_ros.py  green_detect_depth.py
poker_interfaces/: CMakeLists.txt  package.xml
poker_interfaces/action/: BetChips.action  DetectCardOnce.action  PickCard.action
poker_interfaces/action/Camera/: DetectChip.action  ObserveGestures.action
poker_interfaces/action/Robot/: MoveNamedPose.action  PickCard.action  ShowCard.action
poker_interfaces/msg/Voice/: HumanIntent.msg
